# nws-cli

./: .gitignore  COPYING  Cargo.toml  LICENSE  README.markdown  README.md  README.org  lib.rs  nws-cli.asd
src/: forecast.rs  forecast_json.rs  geocode.rs  grid_json.rs  lib.rs  main.lisp  main.rs  util.lisp
tests/: main.lisp
