[package]
name = "nws-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.208"
serde = { version = "1.0.208", features = ["derive"] }

[lib]
name = "nwslib"
path = "src/lib.rs"

[[bin]]
  name = "nws-cli"
 path = "src/main.rs"
