[package]
name = "nws-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "a CLI application that gets the forecast or current conditions from the National Weather Service"
homepage = "https://codeberg.org/0x4d6165/nws-cli"
repository = "https://codeberg.org/0x4d6165/nws-cli"
readme = "README.org"

[dependencies]
clap = { version = "4.5.15", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.208"
serde = { version = "1.0.208", features = ["derive"] }
anyhow = { version = "1.0.86", features = ["backtrace"] }

[lib]
name = "nwslib"
path = "src/lib.rs"

[[bin]]
  name = "nws-cli"
 path = "src/main.rs"
